# migrate

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
project/mango/: CMakeLists (2).txt  CMakeLists.txt  CMakeSettings.json
project/mango/mango/: mango.h
project/mango/mango/algorithm/: algorithm.h  double.h  string.h
project/mango/mango/config/: basic_config.h  config.h  plan_old_data.h
project/mango/mango/foundation/: enum.h  fixed_string.h  foundation.h  property.h
project/mango/mango/interprocess/: interprocess.h
project/mango/mango/interprocess/eipc/: basic_eipc.h  basic_type.h  client.h  content.h  lock_free_cyclic_queue.h  protocol.h  server.h  session.h
project/mango/mango/math/: interval.h  math.h
project/mango/mango/serialization/: string_serialize.h
project/mango/mango/utility/: fixed_string.h  utility.h
project/mango/src/: CMakeLists.txt
project/mango/src/config/: basic_config.h.in
project/mango/unit/: StaticBindTest.cpp  mango_headers.h  mango_test.cpp
project/mango/unit/foundation/: fixed_string_test.h  property_test.h  property_test_bak.h
project/mango/unit/interprocess/: Timer.h  eipc_client.cpp  eipc_server.cpp
project/mango/unuse/: eipc.h  mango.cpp  mango_headers.h
project/template/: CMakeLists.txt
project/template/src/: KernelConfig.h.in
script/: _script_clear_cache.bat  run.bat  t.txt
